nastavení composer.json pro heroku

--- a/composer.json
+++ b/composer.json
@@ -42,9 +42,7 @@
     "minimum-stability": "stable",
     "extra": {
         "heroku": {
-            "framework": "symfony2",
-            "document-root": "web",
-            "index-document": "app.php"
+            "framework": "symfony2"
         },    
         "symfony-app-dir": "app",
         "symfony-web-dir": "web",
